[project]
name = "fantasyhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "nhl-api-py>=3.0.2",
    "pandas>=2.3.1",
    "tables>=3.10.2",
    "yahoofantasy>=1.4.8",
    "yfpy>=16.0.3",
]
